<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ButtonActivity">

    <Button
        android:id="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E2C2C"
        android:text="@string/btn_1"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_1"
        android:layout_marginTop="10dp"
        android:background="#B62E2E"
        android:text="@string/btn_2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_2"
        android:layout_marginTop="10dp"
        android:background="#B62E2E"
        android:text="@string/btn_3"
        android:textSize="20sp"

        />
</RelativeLayout>